<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDo-List</string>
    <string name="menu_preferences">Einstellungen</string>
    <string name="menu_add_task">ToDo hinzufügen</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="detail_title">Titel:</string>
    <string name="detail_description">Beschreibung:</string>
    <string name="detail_priority">Priorität:</string>
    <string name="prio_high">Hoch</string>
    <string name="prio_mid">Mittel</string>
    <string name="prio_low">Niedrig</string>
    <string name="detail_save">Speichern</string>
    <string name="detail_cancel">Abbrechen</string>
    
    <string name="error_title_empty">Geben Sie bitte einen Titel ein!</string>
    <string name="error_description_null">Keine Beschreibung vorhanden!</string>
    <string name="error_invalid_prio">Ungültige Priorität!</string>
    
    <string name="title_activity_settings">Einstellungen</string>
    <string name="settings_pref_fontsize_title">Schriftgröße</string>
    <string name="settings_pref_fontsize_head_title">Schriftgröße Titel</string>
    <string name="settings_pref_fontsize_tail_title">Schriftgröße Beschreibung</string>
    <string name="settings_pref_theme_title">Theme</string>
    <string name="settings_pref_colour_theme_title">Design</string>
    
</resources>
