<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/settings_pref_fontsize_title" >
	    <EditTextPreference
	        android:defaultValue="14"
	        android:key="fontsize_head"
	        android:order="1"
	        android:inputType="number"
	        android:title="@string/settings_pref_fontsize_head_title" />
	    <EditTextPreference
	        android:defaultValue="10"
	        android:key="fontsize_tail"
	        android:order="2"
	        android:inputType="number"
	        android:title="@string/settings_pref_fontsize_tail_title" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/settings_pref_theme_title" >
	    <ListPreference
	        android:entries="@array/pref_theme_names"
	        android:title="@string/settings_pref_colour_theme_title"
	        android:key="theme"
	        android:entryValues="@array/pref_theme_values"
	        android:defaultValue="0" />
    </PreferenceCategory>
</PreferenceScreen>